# epsteinexposed-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  mcp.json.example  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: index.md  package-lock.json  package.json  vercel.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api/: client.md  tools.md
docs/deploy/: docker.md  vercel.md
docs/guide/: architecture.md  configuration.md  getting-started.md
src/: epstein_client.py  server.py
src/tools/: __init__.py
tests/: test_client.py  test_server.py
