# Credits: Erwin Lejeune — 2026-02-21
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epstein-files-mcp"
version = "0.1.0"
description = "MCP server wrapping the Epstein Exposed API"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[project.scripts]
epstein-mcp = "src.server:main"
