# Credits: Erwin Lejeune — 2026-02-21
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epstein-files-mcp"
version = "0.1.0"
description = "MCP server wrapping the Epstein Exposed API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "epsteinexposed>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
epstein-mcp = "src.server:main"
